# mcp-feedback-scope

./: .bumpversion.cfg  .pre-commit-config.yaml  Makefile  README.md  README.zh-CN.md  README.zh-TW.md  pyproject.toml  release_body.md
.github/workflows/: build-and-release.yml  build-desktop.yml  publish.yml
RELEASE_NOTES/: CHANGELOG.en.md  CHANGELOG.md  CHANGELOG.zh-CN.md  CHANGELOG.zh-TW.md
docs/: DESKTOP_BUILD.md  DESKTOP_BUILD_IMPROVEMENTS.md  WORKFLOWS.md
docs/architecture/: component-details.md  deployment-guide.md
docs/en/: cache-management.md
docs/en/ssh-remote/: browser-launch-issues.md
docs/zh-CN/: cache-management.md
docs/zh-CN/ssh-remote/: browser-launch-issues.md
docs/zh-TW/: cache-management.md
docs/zh-TW/ssh-remote/: browser-launch-issues.md
examples/: mcp-config-desktop.json  mcp-config-web.json
scripts/: build_desktop.py  cleanup_cache.py  release.py  validate_message_codes.py
src-tauri/: Cargo.toml  pyproject.toml  tauri.conf.json
src-tauri/python/mcp_feedback_scope_desktop/: desktop_app.py
src/mcp_feedback_scope/: __init__.py  __main__.py  cli.py  i18n.py  models.py  server.py  store.py  web_server.py
src/mcp_feedback_scope/cli/: __init__.py  feedback_cli.py
tests/: conftest.py
tests/fixtures/: test_data.py
tests/helpers/: mcp_client.py
tests/integration/: test_i18n_integration.py  test_web_integration.py
tests/unit/: test_error_handler.py  test_gzip_compression.py  test_i18n_core.py  test_memory_monitor.py  test_port_manager.py  test_resource_manager.py  test_session_cleanup.py  test_web_ui.py
(+24 files in other folders)
