[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-feedback-scope"
version = "0.1.0"
description = "MCP server for interactive feedback with multi-session support via Web UI and CLI"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.0.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "httpx>=0.27.0",
    "jinja2>=3.1.0",
]

[project.scripts]
mcp-feedback-scope = "mcp_feedback_scope.server:main"
mcp-feedback-web = "mcp_feedback_scope.web_server:main"
mcp-feedback-cli = "mcp_feedback_scope.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_feedback_scope"]
